--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="buttons-demo">
             <button class="button-invite" onclick="location.href='https://discord.com/oauth2/authorize?client_id=992864198231081111&permissions=8&scope=applications.commands%20bot';"><span class="text">Zaproś</span></button>
-            <button class="button-panel">Panel</button>
+            <button class="button-panel" onclick="location.href='https://discord.gg/TmUpSDyzQn';">Discord</button>
         </div>
         <!-- Loading script file -->
         <script src="script.js"></script>
